--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.3.1",
+    "lucide-react": "^0.263.1",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
